# spec-forge

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  client-example.tsx  iii-config.yaml
bench/: README.md  bench-ts.mjs  compare.mjs  data.json  e2e-bench.mjs  json-render-bench.mjs  json-render-real.mjs  package.json  run.sh  spec-forge-bench.mjs  specs.json  v2-bench.mjs
client/: package-lock.json  package.json
client/src/: index.ts  json-render-adapter.ts
demo/: index.html
docs/superpowers/plans/: 2026-04-01-spec-forge-v2.md
docs/superpowers/specs/: 2026-04-01-spec-forge-v2-design.md
examples/: react-usage.tsx
src/: bench.rs  cache.rs  catalogs.rs  diff.rs  limiter.rs  main.rs  parser.rs  prompt.rs  semantic.rs  session.rs  types.rs  validate.rs
