[package]
name = "spec-forge"
version = "0.1.0"
edition = "2021"
description = "Rust generation server for json-render — caching, streaming, rate limiting, and spec diffing"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "6"
tokio-stream = "0.1.18"
async-stream = "0.3.6"
futures = { version = "0.3.32", default-features = false, features = ["alloc"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
dotenv = "0.15.0"

[[bin]]
name = "spec-forge"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
