[package]
name = "spec-forge"
version = "0.1.0"
edition = "2021"
description = "iii-sdk worker for json-render UI spec generation — caching, rate limiting, and spec diffing"

[dependencies]
iii-sdk = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
futures-util = "0.3"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "spec-forge"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
